// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/atoms/Button Primary 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  background-color: #00B0CA;
  padding: 0.9rem 3.7rem;
  border: none;
  border-radius: 40px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  cursor: pointer;
  color: #fff;
  width: auto;
}

.c1:hover {
  background-color: #0BC1DC;
  color: #fff;
}

.c1:active {
  background-color: #029FB7;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c1:disabled {
  background-color: #F1F2F7;
  color: #B8BCD5;
  cursor: default;
}

.c1:disabled,
.c1:disabled:hover {
  cursor: default;
}

.c2 {
  display: inline-block;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (max-width:540px) {
  .c1 {
    padding: 0.9rem 1rem;
    width: 88%;
  }
}

<div
  className="c0"
>
  <button
    className="c1"
    color="primary"
    size="md"
  >
    <span
      className="c2"
      size="md"
    >
      Primary Button
    </span>
  </button>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/atoms/Button Secondary 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  background-color: #fff;
  padding: 0.9rem 3.7rem;
  border: none;
  border-radius: 40px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  cursor: pointer;
  color: #00B0CA;
  width: auto;
  box-shadow: inset 0px 0px 0px 3px #00B0CA;
  border-left: 1px solid #00B0CA;
  border-right: 1px solid #00B0CA;
}

.c1:hover {
  background-color: #fff;
  color: #00B0CA;
}

.c1:active {
  background-color: #029FB7;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c1:disabled {
  background-color: #F1F2F7;
  color: #B8BCD5;
  cursor: default;
}

.c1:disabled,
.c1:disabled:hover {
  cursor: default;
}

.c2 {
  display: inline-block;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (max-width:540px) {
  .c1 {
    padding: 0.9rem 1rem;
    width: 88%;
  }
}

<div
  className="c0"
>
  <button
    className="c1"
    color="secondary"
    size="md"
  >
    <span
      className="c2"
      size="md"
    >
      Secondary Button
    </span>
  </button>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/atoms/Button Size sm 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  background-color: #00B0CA;
  padding: 0.1rem 2rem;
  border: none;
  border-radius: 40px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  cursor: pointer;
  color: #fff;
  width: auto;
}

.c1:hover {
  background-color: #0BC1DC;
  color: #fff;
}

.c1:active {
  background-color: #029FB7;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c1:disabled {
  background-color: #F1F2F7;
  color: #B8BCD5;
  cursor: default;
}

.c1:disabled,
.c1:disabled:hover {
  cursor: default;
}

.c2 {
  display: inline-block;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (max-width:540px) {
  .c1 {
    padding: 0.9rem 1rem;
    width: 88%;
  }
}

<div
  className="c0"
>
  <button
    className="c1"
    color="primary"
    size="sm"
  >
    <span
      className="c2"
      size="sm"
    >
      Small Button
    </span>
  </button>
  <div
    className="c3"
  />
</div>
`;
